syntax = "proto3";

package userPackage;

service User {
  rpc allUsers(Empty) returns (Users);
  rpc createUser(UserItem) returns (UserItem);
  rpc readUser(UserId) returns (UserItem);
  rpc updateUser(UserItem) returns (UserItem);
  rpc deleteUser(UserId) returns (Empty);
}

message Empty {}

message UserId {
  string id = 1;
}

message UserItem {
  string id = 1;
  string name = 2;
  string age = 3;
  string gender = 4;
}

message Users {
  repeated UserItem users = 1;
}